Fixed center alignment on crowdy2's bottom button

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -29,7 +29,7 @@
 }
 
 .text-center {
-  text-align:center
+  text-align: center;
 }
 
 /* tabs */
